shop/k8s/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
  namespace: shop
spec:

  replicas: 2

  selector:
    matchLabels:
      app: products-api

  template:

    metadata:
      labels:
        app: products-api

    spec:

      containers:

        - name: products-api

          image: 191136519352.dkr.ecr.ap-south-1.amazonaws.com/products

          ports:
            - containerPort: 8000


---

apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: shop

spec:

  type: ClusterIP

  selector:
    app: products-api

  ports:

    - port: 80
      targetPort: 8000
