shop/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:

  name: shop-ingress

  namespace: shop

spec:

  ingressClassName: nginx

  rules:

    - http:

        paths:

          - path: /api/products
            pathType: Prefix

            backend:

              service:
                name: products-service
                port:
                  number: 80


          - path: /api/orders
            pathType: Prefix

            backend:

              service:
                name: orders-service
                port:
                  number: 80


          - path: /
            pathType: Prefix

            backend:

              service:
                name: ui-service
                port:
                  number: 80
